--- a/index.html
+++ b/index.html
@@ -31,8 +31,10 @@
         // Calculate weeks since release
         const weeksSinceRelease = Math.floor((today - expansionReleaseDate) / (7 * 24 * 60 * 60 * 1000));
 
-        // Calculate the number of Sparks
-        const fracturedSparks = weeksSinceRelease;
+        // Calculate the number of Fractured Sparks, including the extra from the quest
+        const fracturedSparks = weeksSinceRelease + 1; // Adding 1 for the Omens Unified quest reward
+
+        // Calculate the number of full Sparks
         const fullSparks = Math.floor(fracturedSparks / 2);
 
         // Update the webpage
