--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
         p {
             font-size: 1.5rem;
         }
+        pre {
+            background-color: #f4f4f4;
+            padding: 10px;
+            border-radius: 5px;
+            font-size: 1.2rem;
+            margin: 20px auto;
+            width: fit-content;
+            white-space: pre-wrap;
+            word-break: break-word;
+        }
     </style>
 </head>
 <body>
@@ -23,9 +33,11 @@
     <p id="fractured">Fractured Spark of Omens: Calculating...</p>
     <p id="spark">Spark of Omens: Calculating...</p>
 
+    <pre id="wowScript">Generating script...</pre>
+
     <script>
-        // Define the release date of the expansion (adjust as necessary)
-        const expansionReleaseDate = new Date('2024-08-26'); // Example date
+        // Define the release date of the expansion
+        const expansionReleaseDate = new Date('2024-08-26'); // Release date set to August 26, 2024
         const today = new Date();
 
         // Calculate weeks since release
@@ -40,6 +52,10 @@
         // Update the webpage
         document.getElementById('fractured').innerText = `Fractured Spark of Omens: ${fracturedSparks}`;
         document.getElementById('spark').innerText = `Spark of Omens: ${fullSparks}`;
+
+        // Generate the in-game script
+        const wowScript = `/run a=C_CurrencyInfo.GetCurrencyInfo(3023) print("You have earned " .. a.totalEarned .. " of " .. a.maxQuantity .. " possible Fractured Spark of Omens")`;
+        document.getElementById('wowScript').innerText = wowScript;
     </script>
 </body>
 </html>
