--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             background-color: #f4f4f4;
             padding: 10px;
             border-radius: 5px;
-            font-size: 0.9rem; /* Smaller font */
+            font-size: 0.9rem;
             margin: 0;
             white-space: pre-wrap;
             word-break: break-word;
@@ -49,8 +49,18 @@
 </head>
 <body>
     <h1>Spark of Omens Tracker</h1>
-    <p id="fractured">Fractured Spark of Omens: Calculating...</p>
-    <p id="spark">Spark of Omens: Calculating...</p>
+    <p id="fractured"></p>
+    <p id="spark"></p>
+
+    <h2>Weapon Crafting Costs</h2>
+    <label>
+        <input type="checkbox" id="oneHandCheckbox" onchange="handleCheckboxChange('oneHand')"> 1H + Offhand
+    </label>
+    <label>
+        <input type="checkbox" id="twoHandCheckbox" onchange="handleCheckboxChange('twoHand')"> Two-Handed Weapon
+    </label>
+    <p id="selected-craft">Select a weapon option to see the total crest costs.</p>
+    <p id="mythic-runs"></p>
 
     <div class="script-container">
         <pre id="wowScript">Generating script...</pre>
@@ -58,28 +68,100 @@
     </div>
 
     <script>
-        // Define the release date of the expansion
-        const expansionReleaseDate = new Date('2024-08-26'); // Release date set to August 26, 2024
+        const expansionReleaseDate = new Date('2024-08-26');
         const today = new Date();
-
-        // Calculate weeks since release
         const weeksSinceRelease = Math.floor((today - expansionReleaseDate) / (7 * 24 * 60 * 60 * 1000));
-
-        // Calculate the number of Fractured Sparks, including the extra from the quest
-        const fracturedSparks = weeksSinceRelease + 1; // Adding 1 for the Omens Unified quest reward
-
-        // Calculate the number of full Sparks
+        const fracturedSparks = weeksSinceRelease + 1;
         const fullSparks = Math.floor(fracturedSparks / 2);
 
-        // Update the webpage
-        document.getElementById('fractured').innerText = `Fractured Spark of Omens: ${fracturedSparks}`;
-        document.getElementById('spark').innerText = `Spark of Omens: ${fullSparks}`;
+        document.getElementById("fractured").innerText = `Fractured Spark of Omens: ${fracturedSparks}`;
+        document.getElementById("spark").innerText = `Spark of Omens: ${fullSparks}`;
 
-        // Generate the in-game script
+        const costPerItem = { "619": 45, "636": 90 };
+        const twoHandCrestCosts = { "619": costPerItem["619"], "636": costPerItem["636"] };
+        const oneHandOffhandCrestCosts = { "619": costPerItem["619"] * 2, "636": costPerItem["636"] * 2 };
+
+        function handleCheckboxChange(selected) {
+            const oneHandCheckbox = document.getElementById("oneHandCheckbox");
+            const twoHandCheckbox = document.getElementById("twoHandCheckbox");
+
+            if (selected === 'oneHand') {
+                twoHandCheckbox.checked = false;
+            } else if (selected === 'twoHand') {
+                oneHandCheckbox.checked = false;
+            }
+            updateDisplay();
+        }
+
+        function calculateTotal(craftingType) {
+            const sparksUsed = 2;
+            const itemsCrafted = craftingType === "2H" ? 1 : 2;
+            const sparksRemaining = fullSparks - sparksUsed;
+            const additionalItems = sparksRemaining > 0 ? sparksRemaining : 0;
+
+            const remainingRunedCrests = additionalItems * costPerItem["619"];
+            const remainingGildedCrests = additionalItems * costPerItem["636"];
+            const selectedCrestCosts = craftingType === "2H" ? twoHandCrestCosts : oneHandOffhandCrestCosts;
+
+            return {
+                totalRuned: selectedCrestCosts["619"] + remainingRunedCrests,
+                totalGilded: selectedCrestCosts["636"] + remainingGildedCrests,
+                totalItems: itemsCrafted + additionalItems,
+                totalSparks: sparksUsed + additionalItems,
+            };
+        }
+
+        function calculateMythicRuns(totalCrests, crestsPerRun) {
+            return Math.ceil(totalCrests / crestsPerRun);
+        }
+
+        function updateDisplay() {
+            const isOneHandSelected = document.getElementById("oneHandCheckbox").checked;
+            const isTwoHandSelected = document.getElementById("twoHandCheckbox").checked;
+
+            if (isOneHandSelected && isTwoHandSelected) {
+                document.getElementById("selected-craft").innerText = "Please select only one option: 1H + Offhand or Two-Handed Weapon.";
+                return;
+            }
+
+            let craftingType = null;
+            if (isOneHandSelected) craftingType = "1H";
+            if (isTwoHandSelected) craftingType = "2H";
+
+            if (!craftingType) {
+                document.getElementById("selected-craft").innerText = "Select a weapon option to see the total crest costs.";
+                document.getElementById("mythic-runs").innerText = "";
+                return;
+            }
+
+            const { totalRuned, totalGilded, totalItems, totalSparks } = calculateTotal(craftingType);
+
+            const onTimeRuned = calculateMythicRuns(totalRuned, 12);
+            const failedRuned = calculateMythicRuns(totalRuned, 5);
+            const onTimeGilded = calculateMythicRuns(totalGilded, 12);
+            const failedGilded = calculateMythicRuns(totalGilded, 5);
+
+            document.getElementById("selected-craft").innerText = `
+                Total Crest Costs (${craftingType === "2H" ? "Two-Handed Weapon" : "1H + Offhand"}):
+                - Total Items Crafted: ${totalItems} (using ${totalSparks} Sparks)
+                - 619: ${totalRuned} Runed Harbinger's Crests
+                - 636: ${totalGilded} Gilded Harbinger's Crests
+            `;
+
+            document.getElementById("mythic-runs").innerText = `
+                Mythic+ Runs Required (On Time):
+                - ${onTimeRuned} runs at levels 4-7 for Runed Harbinger's Crests
+                - ${onTimeGilded} runs at levels 8+ for Gilded Harbinger's Crests
+
+                Mythic+ Runs Required (Not On Time):
+                - ${failedRuned} runs at levels 4-7 for Runed Harbinger's Crests
+                - ${failedGilded} runs at levels 8+ for Gilded Harbinger's Crests
+            `;
+        }
+
         const wowScript = `/run a=C_CurrencyInfo.GetCurrencyInfo(3023) print("You have earned " .. a.totalEarned .. " of " .. a.maxQuantity .. " possible Fractured Spark of Omens")`;
         document.getElementById('wowScript').innerText = wowScript;
 
-        // Function to copy script to clipboard
         function copyToClipboard() {
             const scriptText = document.getElementById('wowScript').innerText;
             navigator.clipboard.writeText(scriptText).then(() => {
@@ -88,6 +170,8 @@
                 alert('Failed to copy script: ' + err);
             });
         }
+
+        updateDisplay();
     </script>
 </body>
 </html>
