--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <p id="fractured"></p>
     <p id="spark"></p>
 
-    <h2>Weapon Crafting Costs</h2>
+    <h2>Crafting Costs</h2>
     <label>
         <input type="checkbox" id="oneHandCheckbox" onchange="handleCheckboxChange('oneHand')"> 1H + Offhand
     </label>
